Update Swagger formatting and documentation Reduce redundant code in swagger server routes
