# namer/server.py
@@ -1,6 +1,3 @@
-import os
-import yaml
-
 from flask import Flask, jsonify, render_template, request
 from flask_swaggerui import render_swaggerui, build_static_blueprint
 from search import Search
@@ -10,7 +7,22 @@ app = Flask(__name__)
 app.register_blueprint(build_static_blueprint("swaggerui", __name__))
 
 
-@app.route("/")
+def load_swagger_yaml(filename):
+    """
+    Loads the YAML filename specified
+    :param filename: Filename string of swagger YAML
+    :return: JSON of swagger YAML filename
+    """
+    import os
+    import yaml
+
+    path = os.path.join(os.path.dirname(__file__), 'swagger', filename)
+    v1_swag = open(path, 'r')
+    docs = yaml.load(v1_swag)
+    return jsonify(docs)
+
+
+@app.route('/')
 def index():
     """
     Root server page
@@ -19,7 +31,7 @@ def index():
     return render_template("search.html")
 
 
-@app.route("/api/search/v1/docs")
+@app.route('/api/search/v1/docs/')
 def search_docs():
     """
     Renders swagger documentation for search API
@@ -28,19 +40,16 @@ def search_docs():
     return render_swaggerui(swagger_spec_path="/api/search/v1/swagger")
 
 
-@app.route("/api/search/v1/swagger")
+@app.route('/api/search/v1/swagger')
 def search_swagger():
     """
     Loads swagger YAML file for search API
     :return: JSON of swagger YAML file for search API
     """
-    v1_swag = open(os.path.dirname(__file__) +
-                   "/swagger/search.v1.swagger.yaml", "r")
-    docs = yaml.load(v1_swag)
-    return jsonify(docs)
+    return load_swagger_yaml('search.v1.swagger.yaml')
 
 
-@app.route("/api/search/v1/search", methods=['GET'])
+@app.route('/api/search/v1/search', methods=['GET'])
 def search_search():
     """
     Returns a JSON response containing the results of the search term
@@ -55,7 +64,7 @@ def search_search():
     return jsonify(result)
 
 
-@app.route("/api/validator/v1/docs")
+@app.route('/api/validator/v1/docs/')
 def validator_docs():
     """
     Renders swagger documentation for validator API
@@ -64,19 +73,16 @@ def validator_docs():
     return render_swaggerui(swagger_spec_path="/api/validator/v1/swagger")
 
 
-@app.route("/api/validator/v1/swagger")
+@app.route('/api/validator/v1/swagger')
 def validator_swagger():
     """
-        Loads swagger YAML file for validator API
-        :return: JSON of swagger YAML file for validator API
-        """
-    v1_swag = open(os.path.dirname(__file__) +
-                   "/swagger/validator.v1.swagger.yaml", "r")
-    docs = yaml.load(v1_swag)
-    return jsonify(docs)
+    Loads swagger YAML file for validator API
+    :return: JSON of swagger YAML file for validator API
+    """
+    return load_swagger_yaml('validator.v1.swagger.yaml')
 
 
-@app.route("/api/validator/v1/corporate", methods=['GET'])
+@app.route('/api/validator/v1/corporate', methods=['GET'])
 def validator_corporate():
     """
     Returns a JSON response containing the results of corporate validation
@@ -88,7 +94,7 @@ def validator_corporate():
     return jsonify(result)
 
 
-@app.route("/api/validator/v1/descriptive", methods=['GET'])
+@app.route('/api/validator/v1/descriptive', methods=['GET'])
 def validator_descriptive():
     """
     Returns a JSON response containing the results of descriptive validation
@@ -100,7 +106,7 @@ def validator_descriptive():
     return jsonify(result)
 
 
-@app.route("/api/validator/v1/distinctive", methods=['GET'])
+@app.route('/api/validator/v1/distinctive', methods=['GET'])
 def validator_distinctive():
     """
     Returns a JSON response containing the results of distinctive validation
@@ -112,7 +118,7 @@ def validator_distinctive():
     return jsonify(result)
 
 
-@app.route("/api/validator/v1/validate", methods=['GET'])
+@app.route('/api/validator/v1/validate', methods=['GET'])
 def validator_validate():
     """
     Returns a JSON response containing the results of overall validation
@@ -122,6 +128,7 @@ def validator_validate():
 
     result = Validator.validate(query)
     return jsonify(result)
+
 
 if __name__ == "__main__":
     app.run()
